# CppTexturePacker

./: CMakeLists.txt  vcpkg.json
.github/workflows/: c-cpp.yml
3rd/CImg-v.3.4.2/html/: footer.html  footer_doxygen.html
3rd/libplist-2.6.0/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure
3rd/libplist-2.6.0/cython/: Makefile.in
3rd/libplist-2.6.0/docs/: Makefile.in
3rd/libplist-2.6.0/fuzz/: Makefile.in
3rd/libplist-2.6.0/include/: Makefile.in
3rd/libplist-2.6.0/libcnary/: Makefile.in
3rd/libplist-2.6.0/src/: Makefile.in
3rd/libplist-2.6.0/test/: Makefile.in
3rd/libplist-2.6.0/tools/: Makefile.in
include/: utils.h
